--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,10 +39,10 @@ jobs:
           name: build jekyll site
           command: bundle exec jekyll build
 
-       - deploy:
+      - deploy:
           name: deploy jekyll site
           command: |
-            if [ "${CIRCLE_BRANCH}" == "gh-pages" ]; then
+            if [ "${CIRCLE_BRANCH}" == "master" ]; then
               ssh -o StrictHostKeyChecking=no circleci@${BOSTONHACKS_IP_ADDR} 'rm -rf /var/www/museo/public'
               scp -o StrictHostKeyChecking=no -r ~/museo/_site/ circleci@${BOSTONHACKS_IP_ADDR}:/var/www/museo/public
             fi
