--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://bostonhacks.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: boston_hacks
 github_username:  bostonhacks
+url: https://museo.bostonhacks.io
 
 # Build settings
 markdown: kramdown
