--- a/_config.yml
+++ b/_config.yml
@@ -19,10 +19,9 @@ description: >- # this means to ignore newlines until "baseurl:"
   BostonHacks - Boston's premier collegiate MLH hackathon. 
   Join over 400 students in a weekend of hacking and fun.
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "https://bostonhacks.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://museo.bostonhacks.io"
 twitter_username: boston_hacks
 github_username:  bostonhacks
-url: https://museo.bostonhacks.io
 
 # Build settings
 markdown: kramdown
