--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: contact@bostonhacks.io
 description: >- # this means to ignore newlines until "baseurl:"
   BostonHacks - Boston's premier collegiate MLH hackathon.
   Join over 450 students in a weekend of hacking, learning, and fun.
-baseurl: "/" # the subpath of your site, e.g. /blog
+baseurl: "/bostonhacks" # the subpath of your site, e.g. /blog
 url: "https://make.bu.edu/bostonhacks/"
 twitter_username: boston_hacks
 github_username:  bostonhacks
