--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   BostonHacks - Boston's premier collegiate MLH hackathon.
   Join over 450 students in a weekend of hacking, learning, and fun.
 baseurl: "/bostonhacks" # the subpath of your site, e.g. /blog
-url: "https://make.bu.edu/bostonhacks/"
+url: "https://make.bu.edu"
 twitter_username: boston_hacks
 github_username:  bostonhacks
 
